--- a/styles4.css
+++ b/styles4.css
@@ -1,18 +1,87 @@
 .container4{
-    background-color: #FFA500;
+    background-color: #D7CEC7;
     display:flex;
     flex-direction: column;
 }
 header{
-    text-align: center;
     display: flex;
-    flex-direction: column;
-}
+    justify-content: space-between;
+    background-color: white;
+  
+  }
+  
+  nav>ol{
+    list-style: none;
+  }
+  
+  nav>ol>li{
+        display: inline-flex;
+        padding: 5px;
+        margin: 5px;
+  }
+  
+  nav>ol>li>a{
+      text-decoration: none;
+      color: #76323F;
+      padding: 7px;
+      
+  }
+  
+  nav>ol>li>a:hover {
+          background-color:#76323F;
+          color: #D7CEC7;
+          border-radius: 10px;
+  }
+  
+  .logo {
+      border: solid black;
+      margin-bottom: 10px;
+      cursor: pointer;
+  }
+  
+  .book{
+        background-color: #76323F;
+        color:white;
+        border-radius: 10px;
+        margin-left: 10px;
+        padding: 7px;
+  }
+  
+  .book:hover {
+        background-color: black;
+  }
+
 .description4{
     display: flex;
     justify-content: space-around;
     
 }
+.description4 img:hover{
+    animation: shake 1s;
+    animation-iteration-count: infinite;
+    
+}
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+.tittle4{
+    color:#4a0000 ;
+     text-align: center;
+}
+.p4{color: black;
+    text-align: center;
+}
+.p5{text-align: center;}
 .description5{
     text-align: center;
 }
@@ -20,10 +89,15 @@ header{
     text-align: center;
 
 }
+
 ul {
     list-style: none;
 }
-.images4{text-align: center;}   
+.images4{
+    text-align: center;
+  
+    
+}   
 
 @media screen and (max-width:700px) {
 
@@ -36,4 +110,37 @@ ul {
         width: 100%;
     }
 }
-      
+#contacts {
+    background-color: #76323F;
+    padding: 20px;
+    border-radius: 200px;
+    color: white;
+    align-items: center;
+    
+    
+  
+  }
+  
+  #contacts>img{
+    float: left;
+    border: black solid;
+    margin-top: 20px;
+    margin-left: 25px;
+  
+  }
+  
+  #contacts>p{
+    display: inline-flex;
+    justify-content: space-evenly;
+    margin: 10px;
+    
+  
+  
+  
+  }
+  
+  #copy1{
+      background-color: #D7CEC7;
+      font-size: smaller;
+  
+  }    
