--- a/login4.css
+++ b/login4.css
@@ -1,28 +1,10 @@
-/* Full-width input fields */
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-  }
-  
-  /* Set a style for all buttons */
-  button {
-    background-color: #FFA500;
-    color:black;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-  }
-  
-  button:hover {
-    opacity: 0.8;
-  }
-  
+.container1{
+      display: flex;
+      flex-direction: column;
+      background-color:#D7CEC7;
+      overflow: auto;
+      box-sizing: border-box;
+}
   
   /* Center the image and position the close button */
   .imgcontainer {
@@ -36,7 +18,7 @@ input[type=text], input[type=password] {
     border-radius: 50%;
   }
   
-  .input4 {
+  .input4,.sign1 {
     padding: 16px;
   }
   
@@ -44,9 +26,34 @@ input[type=text], input[type=password] {
     float: right;
     padding-top: 16px;
   }
+
+  /* Full-width input fields */
+  input[type=text], [type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: #76323F;
+  color:#D7CEC7;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
   
   /* The Modal (background) */
-  #login4 {
+  #login4,#sign1 {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -61,10 +68,11 @@ input[type=text], input[type=password] {
   
   /* Modal Content/Box */
   .content4 {
-    background-color:beige;
+    background-color:#D7CEC7;
     margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
     border: 1px solid black;
     width: 50%; /* Could be more or less, depending on screen size */
+    padding: 20px;
   }
   
   /* The Close Button (x) */
@@ -108,3 +116,142 @@ input[type=text], input[type=password] {
     
   }
 
+header{
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+
+}
+
+nav>ol{
+  list-style: none;
+}
+
+nav>ol>li{
+      display: inline-flex;
+      padding: 5px;
+      margin: 5px;
+}
+
+nav>ol>li>a{
+    text-decoration: none;
+    color: #76323F;
+    padding: 7px;
+    
+}
+
+nav>ol>li>a:hover {
+        background-color:#76323F;
+        color: #D7CEC7;
+        border-radius: 10px;
+}
+
+.logo {
+    border: solid black;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.book{
+      background-color: #76323F;
+      color:white;
+      border-radius: 10px;
+      margin-left: 10px;
+      padding: 7px;
+}
+
+.book:hover {
+      background-color: black;
+}
+
+#intro{
+      background-image: url(./images/27-royalhighschool.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 700px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-size: xx-large;
+}
+
+#about2{
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url(./images/58-royalhighschool.jpg);
+    background-size: cover;
+    color: white;
+    margin-bottom: 20px;
+    
+}
+
+#about2>ul>li{
+          margin-left: 50px;
+}
+
+#about2>h3{
+      text-decoration: underline;
+      font-size: xx-large;
+      margin: 0;
+      border-bottom: solid white 4px;
+      color: white;
+}
+
+#about1>ul{
+      list-style: none;
+      display: flex;
+      justify-content: space-evenly;
+      border-top: solid 5px #76323F;
+      padding-top: 15px;
+      margin-top: 0;
+}
+
+#about1>ul>li>p{
+  text-align: center;
+  margin-top: -20px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+#about1>ul>li>img{
+        border-radius: 50%;
+        cursor: pointer;
+}
+
+#contacts {
+  background-color: #76323F;
+  padding: 20px;
+  border-radius: 200px;
+  color: white;
+  align-items: center;
+  
+  
+
+}
+
+#contacts>img{
+  float: left;
+  border: black solid;
+  margin-top: 20px;
+  margin-left: 25px;
+
+}
+
+#contacts>p{
+  display: inline-flex;
+  justify-content: space-evenly;
+  margin: 10px;
+  
+
+
+
+}
+
+#copy1{
+    background-color: #D7CEC7;
+    font-size: smaller;
+
+}
