--- a/login4.css
+++ b/login4.css
@@ -173,7 +173,11 @@ nav>ol>li>a:hover {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      font-size: xx-large;
+      font-size: 50px;
+      font-family: 'Fontdiner Swanky', cursive;
+      text-align: center;
+      
+
 }
 
 #about2{
@@ -192,9 +196,9 @@ nav>ol>li>a:hover {
           margin-left: 50px;
 }
 
-#about2>h3{
-      text-decoration: underline;
+#about2>h3 {
       font-size: xx-large;
+      font-family: 'Fontdiner Swanky', cursive;
       margin: 0;
       border-bottom: solid white 4px;
       color: white;
@@ -214,6 +218,8 @@ nav>ol>li>a:hover {
   margin-top: -20px;
   cursor: pointer;
   font-weight: bold;
+  font-size: large;
+  color: #76323F;
 }
 
 #about1>ul>li>img{
