--- a/styles4.css
+++ b/styles4.css
@@ -77,9 +77,11 @@ header{
 .tittle4{
     color:#4a0000 ;
      text-align: center;
+     font-family: 'Fontdiner Swanky', cursive;
 }
 .p4{color: black;
     text-align: center;
+    font-weight: bold;
 }
 .p5{text-align: center;}
 .description5{
